--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start rmq-example --watch",
     "start:consumer:dev": "nest start consumer --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/rmq-example/main",
