--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/rmq-example/test/jest-e2e.json"
   },
@@ -25,6 +24,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.1",
     "@nestjs/platform-express": "^10.0.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
