--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rmq-example",
+  "name": "main",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -9,16 +9,16 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start rmq-example --watch",
+    "start:dev": "nest start main --watch",
     "start:consumer:dev": "nest start consumer --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/rmq-example/main",
+    "start:prod": "node dist/apps/main/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/rmq-example/test/jest-e2e.json"
+    "test:e2e": "jest --config apps/main/test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
